<resources>
    <string name="app_name">City</string>
    <string name="phone_driver">Celular</string>
    <string name="call_uber">Solicitar</string>
    <string name="type_5">Auto</string>
    <string name="type_4">City Green</string>
    <string name="type_3">City XL</string>
    <string name="type_2">City Black</string>
    <string name="type_1">Solicitar</string>
    <string name="type_11">Solicitar</string>
    <string name="phone">Celular</string>
    <string name="name">Nombre </string>
    <string name="confirm">Confirmar</string>
    <string name="back">Atras</string>
    <string name="working">Disponible</string>
    <string name="destination">Destino</string>
    <string name="picked_customer">Pasajero Recogido</string>
    <string name="avisar_customer">Avisar al Cliente</string>
    <string name="car">Vehículo</string>
    <string name="balance">Precio</string>
    <string name="payout">Pago</string>
    <string name="pay_here">Pagar</string>
    <string name="from_to">Desde - Hacia</string>
    <string name="distance">Distancia</string>
    <string name="date">Datos</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvidaste tu contraseña?</string>
    <string name="log_in">Ingresar</string>
    <string name="register">Registro</string>
    <string name="history">Historial</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Desconectar</string>
    <string name="customer">Pasajero</string>
    <string name="driver">Conductor</string>
    <string name="admin">Administrador</string>
    <string name="getting_driver">Aguardando confirmacion</string>
    <string name="looking_driver">Buscando Vehículo</string>
    <string name="driver_here">Su vehículo ha llegado</string>
    <string name="driver_found">Su vehículo llegará en los proximos 5/10 minutos.</string>
    <string name="drive_complete">Viaje Completado</string>
    <string name="not_approved">Su cuenta no está aprobada</string>
    <string name="no_driver_near_you">No se ha encontrado ningún conductor cerca de usted.</string>
    <string name="cancel_ride">Cancelar Viaje</string>
    <string name="price">Precio del viaje:</string>
    <string name="pricedos">Distancia:</string>

    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>


    <string name="account_prompt">Solicitar</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAk0qaxB3yQBzYPsew8n3A3iGCOrqHVfB0</string>


    <string name="action_example">Example action</string>


    <string name="style_json">
  [
    {
        \"featureType\": \"all\",
        \"elementType\": \"labels\",
        \"stylers\": [
            {
                \"visibility\": \"off\"
            }
        ]
    },
    {
        \"featureType\": \"administrative\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"visibility\": \"off\"
            },
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"landscape\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.attraction\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.business\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.government\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#dfdcd5\"
            }
        ]
    },
    {
        \"featureType\": \"poi.medical\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#dfdcd5\"
            }
        ]
    },
    {
        \"featureType\": \"poi.park\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#bad294\"
            }
        ]
    },
    {
        \"featureType\": \"poi.place_of_worship\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.school\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"poi.sports_complex\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#efebe2\"
            }
        ]
    },
    {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
            {
                \"color\": \"#ffffff\"
            }
        ]
    },
    {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
            {
                \"visibility\": \"off\"
            }
        ]
    },
    {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
            {
                \"color\": \"#ffffff\"
            }
        ]
    },
    {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
            {
                \"visibility\": \"off\"
            }
        ]
    },
    {
        \"featureType\": \"road.local\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
            {
                \"color\": \"#fbfbfb\"
            }
        ]
    },
    {
        \"featureType\": \"road.local\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
            {
                \"visibility\": \"off\"
            }
        ]
    },
    {
        \"featureType\": \"transit\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"visibility\": \"off\"
            }
        ]
    },
    {
        \"featureType\": \"water\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"color\": \"#a5d7e0\"
            }
        ]
    }
]
  </string>
    <string name="to">Hacia...</string>
    <string name="to2">Agregar Tercer Destino...</string>
    <string name="to3">Agregar Cuarto Destino...</string>
    <string name="from">Desde...</string>
    <string name="estimated_price">Precio estimado:</string>
    <string name="no_phone_call_permissions">No diste permisos de llamadas telefónicas</string>
    <string name="driver_no_phone">El conductor no tiene un número sincronizado</string>
    <string name="open_maps">Abrir Mapa</string>
    <string name="your_trips">Tus Viajes</string>
    <string name="waiting_for_location">Esperando ubicación</string>
    <string-array name="account_array">
        <item>Customer</item>
        <item>Driver</item>
    </string-array>
    <string name="driver_search">Buscar Conductor</string>
    <string name="active">Activo</string>
    <string name="trips_available">Viajes Disponibles</string>

</resources>
