<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        tools:context="com.creativedesign.CityRemis.Driver.DriverMapActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/drawerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="20sp"
            android:paddingBottom="10sp"
            android:src="@drawable/ic_menu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:cropToPadding="true"
            android:src="@drawable/ic_logotopp1" />

        <Switch
            android:id="@+id/workingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="20sp"
            android:paddingBottom="10sp"
            android:text="@string/working"
            android:textColor="@android:color/white" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/bottomSheet"
        style="@style/Widget.Design.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <LinearLayout
                android:id="@+id/customerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:elevation="1dp"
                android:orientation="vertical"
                android:translationZ="1dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/bringUpBottomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="15sp"
                        android:src="@android:drawable/arrow_up_float" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/customerProfileImage"
                            android:layout_width="120sp"
                            android:layout_height="120sp"
                            android:padding="20sp"
                            android:src="@mipmap/ic_default_user" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:paddingTop="20sp"
                            android:paddingBottom="5sp"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/darkblue"
                            android:drawableStart="@drawable/ic_phone"
                            android:text="@string/phone_driver"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <TextView
                            android:id="@+id/location_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/open_maps"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:text="@string/waiting_for_location"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/open_maps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/colorPrimary"
                            android:drawableStart="@drawable/ic_place_black_24dp"
                            android:text="@string/open_maps"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <Button
                            android:id="@+id/cancelRide"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/darkblue"
                            android:padding="20sp"
                            android:text="@string/cancel_ride"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/waiting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/verdeosc"
                    android:padding="20sp"
                    android:text="@string/avisar_customer"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/rideStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/azul"
                    android:padding="20sp"
                    android:text="@string/picked_customer"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

